# qwen-vl-finetuning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: train.yaml
src/qwenvl/: config.py  data.py  infer.py  model.py  train.py
